--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,15 @@
 .App-link {
   color: #61dafb;
 }
+h6 {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  color: crimson;
+  z-index: 10;
+  margin: 0;
+  padding: 0;
+}
 
 @keyframes App-logo-spin {
   from {
